k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planet-api
  namespace: planet-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: planet-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: planet-api
            port:
              number: 80
